logs/qi.goban.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/qi'...
Listing './lib/python3.5/site-packages/qi/Goban'...
Listing './lib/python3.5/site-packages/qi/Goban/browser'...
Compiling './lib/python3.5/site-packages/qi/Goban/browser/addVariation.py'...
***   File "./lib/python3.5/site-packages/qi/Goban/browser/addVariation.py", line 53
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qi/Goban/browser/exportPDF.py'...
***   File "./lib/python3.5/site-packages/qi/Goban/browser/exportPDF.py", line 45
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/qi/Goban/browser/images'...
Listing './lib/python3.5/site-packages/qi/Goban/browser/portlets'...
Listing './lib/python3.5/site-packages/qi/Goban/content'...
Listing './lib/python3.5/site-packages/qi/Goban/kss'...
Listing './lib/python3.5/site-packages/qi/Goban/lib'...
Compiling './lib/python3.5/site-packages/qi/Goban/lib/sgflib.py'...
***   File "./lib/python3.5/site-packages/qi/Goban/lib/sgflib.py", line 601
    print "\n\n********** Self-Test 1 **********\n"
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/qi/Goban/lib/typelib.py'...
***   File "./lib/python3.5/site-packages/qi/Goban/lib/typelib.py", line 307
    TYPE = type(1L)
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/qi/Goban/locales'...
Listing './lib/python3.5/site-packages/qi/Goban/profiles'...
Listing './lib/python3.5/site-packages/qi/Goban/profiles/default'...
Listing './lib/python3.5/site-packages/qi/Goban/profiles/default/types'...
Listing './lib/python3.5/site-packages/qi.Goban-1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
